Moved clients to dev dependency

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nyc": "^14.1.1",
     "promise-fs": "^2.1.1",
     "sinon": "^7.5.0",
+    "smartheat-clients": "github:matthewturner/smartheat-clients#v1.0.0",
     "validate-npm-package-license": "^3.0.4"
   },
   "dependencies": {
@@ -40,7 +41,6 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "smartheat-clients": "github:matthewturner/smartheat-clients#v1.0.0"
+    "request-promise": "^4.2.4"
   }
 }
