--- a/package.json
+++ b/package.json
@@ -32,18 +32,11 @@
     "validate-npm-package-license": "^3.0.4"
   },
   "dependencies": {
-    "@hapi/boom": "^9.1.4",
-    "@hapi/cryptiles": "^4.1.3",
-    "@hapi/hoek": "^9.0.4",
     "JSON": "^1.0.0",
-    "axios": "^0.21.2",
-    "cheerio": "^1.0.0-rc.12",
     "@matthewturner/durationjs": "^1.2.3",
     "extend": ">=3.0.2",
     "fs": "^0.0.2",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "moment": "^2.29.4"
   }
 }
